# kolmodin

./: README.md
frontend/: env.example  index.html  package.json  script.js  style.css  svelte.config.js  tailwind.config.js
frontend/game_handlers/: deal_no_deal.js  game_two_echo.js  hello_world.js
frontend/src/: app.css
frontend/src/lib/components/: home-screen.svelte
frontend/src/lib/components/games/ClipQueue/: AdminView.svelte  StreamView.svelte  store.svelte.ts  types.ts
frontend/src/lib/components/games/DealNoDeal/: AdminView.svelte  StreamView.svelte  store.svelte.ts  types.ts
frontend/src/lib/components/games/MedAndraOrd/: AdminView.svelte  RecentGuesses.svelte  StreamView.svelte  store.svelte.ts  types.ts
frontend/src/lib/components/games/Quiz/: AdminView.svelte  RecentGuesses.svelte  StreamView.svelte  store.svelte.ts  types.ts
frontend/src/lib/components/global/: NotificationList.svelte  WebsocketDisconnectOverlay.svelte
frontend/src/lib/components/screens/: GameScreen.svelte  HomeScreen.svelte  SelectGameScreen.svelte
frontend/src/lib/components/ui/: LightSwitch.svelte  StreamControls.svelte  checkbox.svelte  label.svelte
frontend/src/lib/components/ui/button/: index.ts
frontend/src/lib/services/: broadcast.service.ts  game.event.router.ts  lobby.service.ts
frontend/src/lib/stores/: lobby.store.svelte.ts  notification.store.svelte.ts  stream.store.svelte.ts  ui.store.svelte.ts
frontend/src/lib/types/: general.types.ts  stream.types.ts  websocket.types.ts
frontend/src/lib/utils/: logger.ts  stream.utils.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/stream/: +layout.svelte  +page.svelte
kolmodin/: package.json
kolmodin/src/: app.css
kolmodin/src/lib/components/global/: WebsocketDisconnectOverlay.svelte
kolmodin/src/lib/components/screens/: GameScreen.svelte  HomeScreen.svelte  SelectGameScreen.svelte
kolmodin/src/lib/components/ui/: StreamControls.svelte  StreamDemoCard.svelte  badge.svelte  checkbox.svelte  label.svelte
kolmodin/src/lib/services/: api.client.ts  game.event.router.ts  lobby.service.ts
kolmodin/src/lib/stores/: lobby.store.svelte.ts  stream.store.svelte.ts  ui.store.svelte.ts  websocket.store.svelte.ts
kolmodin/src/lib/types/: general.types.ts  websocket.types.ts
kolmodin/src/lib/utils/: logger.ts  stream.utils.ts
kolmodin/src/routes/: +layout.svelte  +page.svelte
kolmodin/src/routes/stream/: +layout.svelte  +page.svelte
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  env.example
server/src/: config.rs  content.rs  db.rs  error.rs  lobby.rs  main.rs  state.rs  twitch_chat_manager.rs  twitch_integration.rs
server/src/game_logic/: clip_queue.rs  deal_no_deal.rs  game_two_echo.rs  hello_world_game.rs  med_andra_ord.rs  messages.rs  mod.rs  quiz.rs  utils.rs
server/src/game_logic/deal_or_no_deal/: mod.rs  types.rs
server/src/twitch/: actors.rs  auth.rs  channel.rs  connection.rs  error.rs  irc_parser.rs  manager.rs  mod.rs  service.rs  token_provider.rs  types.rs
server/src/web/: error.rs  handlers.rs  mod.rs  ws.rs
twitch_irc_server/: .gitignore  Cargo.toml  send_message.py
twitch_irc_server/src/: api.rs  irc_server.rs  main.rs  ui.rs
(+27 files in other folders)
