[package]
name = "kolmodin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "http2"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } # rustls-tls is often preferred
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors", "compression-gzip"] }
tower_governor = { version = "0.7.0", features= ["axum", "tracing"] }
config = "0.15.4"
http = "1.2.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "2.0" # Optional for custom errors
async-trait = "0.1"
