[package]
name = "twitch_irc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.5"
axum = { version = "0.8.4", features = ["http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
